--- a/src/annotate/train/templates/train/annotate.html
+++ b/src/annotate/train/templates/train/annotate.html
@@ -25,7 +25,7 @@
       <input type="hidden" name="image_id" />
       <main>
         <div class="left">
-          <h1>Draw boxes around clouds</h1>
+          <h1>Draw boxes around clouds/snow</h1>
           <div class="image-container"></div>
         </div>
 
